--- a/static/question.css
+++ b/static/question.css
@@ -81,10 +81,27 @@
     align-self: center;
 }
 
-.arrow {
-    cursor: pointer;
+.arrows-container {
+    display: flex;
+    flex-flow: column;
+    padding-left: 5px;
+    border-left: 1px solid #838383;
 }
 
+.arrow-button {
+    cursor: pointer;
+    color: white;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+}
+
+
+.liked {
+    color: #a6e0a0;
+}
 .liked {
     color: #a6e0a0;
 }
